# ChangeLog for games-engines/onscripter-en
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*onscripter-en-20091215 (26 Dec 2009)

  26 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20091215.ebuild,
  +files/onscripter-en-20091215-compiler.patch,
  +files/onscripter-en-20091215-cxxflags.patch:
  Bumped to new version. Updated HOMEPAGE and patches.

  02 Jun 2009; Michał Ziąbkowski <mziab@o2.pl>
  -onscripter-en-20080214.ebuild, onscripter-en-20080823.ebuild,
  +files/gcc44.patch:
  Added GCC 4.4 patch. Removed cruft.

  11 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  onscripter-en-20080214.ebuild, onscripter-en-20080823.ebuild,
  +files/compiler-fix.patch:
  Added patch to fix compiler test.

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
  Fixed metadata.

  21 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl>
  onscripter-en-20080214.ebuild, onscripter-en-20080823.ebuild:
  Added || die.

  21 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +metadata.xml:
  Added metadata.xml.

  14 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  onscripter-en-20080214.ebuild, onscripter-en-20080823.ebuild:
  Ported to EAPI 2

  03 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl>
  onscripter-en-20080823.ebuild:
  Fixed trailing whitespace error.

  28 Aug 2008; Michał Ziąbkowski <mziab@o2.pl>
  +onscripter-en-20080823.ebuild, +files/cxxflags.patch:
  Bumped, rejigged the patch.

  13 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  onscripter-en-20080214.ebuild:
  Fixed repoman reported errors.
