@@ -6,7 +6,9 @@ AUX onscripter-en-20091215-compiler.patch 1034 RMD160 edcfbe415c3fa4dca279d665f1
 AUX onscripter-en-20091215-cxxflags.patch 414 RMD160 3253090c088b60a549be24976fe164839511457e SHA1 9bb7e2479e228228a55b081053db7e52b75706b7 SHA256 e74584730cd63bdeb31e222354618fc4f31071cbcc73ca4831132e73ebf01201
 DIST onscripter-en-20080823-src.tar.bz2 312627 RMD160 275dd07b07eabf47e8c5862a93f08cae474fff22 SHA1 0d40bd57f27bf15c8a5951628383ea4fa6d97845 SHA256 525377d20e9cc5159271d672469fe8e83f438b2cd44d8e2aa994b1d36379ad1e
 DIST onscripter-en-20091215-src.tar.bz2 446915 RMD160 2460c0ae516d079e602eacc7da9f96267778dfb2 SHA1 bf7b3f40fb12a7bc295852839211cb2fd4672ab1 SHA256 af6a4c603e0ab6122e8220b16fd21a151e7e284bb06cdc94220c5bf59ea2cca9
+DIST onscripter-en-20091227-src.tar.bz2 606007 RMD160 2f8b62e4781ce25191bf48cef226031262ea616d SHA1 52776c7902bf2721465bdf20c8a9baddcefa9110 SHA256 dc355a957e32ea6805f5224644dde3d5baf4370fe95342f1d3a5d5735b39e1a5
 EBUILD onscripter-en-20080823.ebuild 985 RMD160 bbb0b54b9a678783cc9b865ec733d340d7992498 SHA1 0462939066f52e649a15d6f04e962fb9c39444b3 SHA256 73e2ee45a3c5e87094749545cd067ccae724570456a201e1aeca1f5575d8a96f
 EBUILD onscripter-en-20091215.ebuild 963 RMD160 3e602d151dc6896385fba720abc4bc6c8ae13976 SHA1 7d28fc44755337a84d29104452d89977ef0cae21 SHA256 d36f6b90921a57b47ab11487662330d7dfcf5056e6e83e88257cc182ccbf3661
-MISC ChangeLog 1556 RMD160 0a81d56db678af9ea388297dc9251d35fc35b661 SHA1 312952c53a216ef4accc2f4a0b95accf5c53a0a1 SHA256 7e846a2096075b838e42bdfcd90ab2e2765b4e9aa94e38ec245823ad70f84aa4
+EBUILD onscripter-en-20091227.ebuild 983 RMD160 9125eeb6e4052ad8bf90d9666a239fc781844b2e SHA1 75abab31d7cda20b81d6a055fdf07109fd971e1d SHA256 07e12596dd2254ebb8fb7dd9a18d051f561ec7a242bc45384a430a430b51eb8e
+MISC ChangeLog 1689 RMD160 729eed35e8b38584c8dc7b33cd452408cb195b42 SHA1 4ba20aca97caa8d02a31870a05e96b8880c19d14 SHA256 82588ab0bb7336b88f363c0d8e05a25f2324013ab9847805cf9c6d9d83139e3f
 MISC metadata.xml 322 RMD160 ae392e7983f4f4d718e919c9d6e42a90d626f770 SHA1 25298823cab9b1a65fd253e1eaf821f2ee1b8148 SHA256 7a1a4d7e2ddfb9cdbda7afab27c0a24e70f150b73ae99565acaf6f656d15a7fe
