@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*onscripter-en-20091227 (28 Dec 2009)
+
+  28 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
+  +onscripter-en-20091227.ebuild:
+  Bumped.
+
 *onscripter-en-20091215 (26 Dec 2009)
 
   26 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
